@@ -27,7 +27,9 @@ from Products.CMFCore.interfaces import IActionRaisedExceptionEvent
 from Products.CMFCore.interfaces import IActionSucceededEvent
 from Products.CMFCore.interfaces import IActionWillBeInvokedEvent
 from Products.CMFCore.interfaces import IContentish
+from Products.CMFCore.interfaces import IWorkflowAware
 from Products.CMFCore.interfaces import IWorkflowDefinition
+from Products.CMFCore.testing import TraversingEventZCMLLayer
 
 
 class Dummy( SimpleItem ):
@@ -124,7 +126,7 @@ def notifyExceptionHandler(evt):
 
 class DummyContent( Dummy ):
 
-    implements(IContentish)
+    implements(IContentish, IWorkflowAware)
     meta_type = 'Dummy'
 
     def getPortalTypeName(self):
@@ -153,6 +155,8 @@ class DummyTypesTool( SimpleItem ):
 
 
 class WorkflowToolTests(unittest.TestCase):
+
+    layer = TraversingEventZCMLLayer
 
     def _makeOne( self, workflow_ids=() ):
         from Products.CMFCore.WorkflowTool import WorkflowTool
